fix date wrapping

--- a/src/widget.scss
+++ b/src/widget.scss
@@ -57,6 +57,7 @@ $top-boundary: 740px;
 
     &__date {
       margin-top: 10px;
+      white-space: nowrap;
     }
   }
 
